# beskar-shelf

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  download-mp3.sh  index.html  links.txt  nginx.conf  package-lock.json  package.json  vite.config.ts
.cursor/plans/: pwa_optimization_roadmap_b577cb43.plan.md
apps/pwa/: .env.example  Dockerfile  package-lock.json  package.json
deploy/: .env.example  README.md  docker-compose.yml
docker/: README.md  docker-compose.yml
docs/: DESIGN_SYSTEM.md
public/: manifest.webmanifest  sw.js
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/components/: BookCard.tsx  BottomNav.tsx  ErrorBoundary.tsx  MiniPlayer.tsx  PullToRefresh.test.tsx  PullToRefresh.tsx  QueryState.tsx  Shell.tsx  Toast.tsx
src/contexts/: AppContext.tsx  ClientContext.tsx  (+2 more)
tools/: README.md  _shim.sh  abs-organize  fill-abs-descriptions  fix-ebooks  get-abs-token  optimize-pdf  pyproject.toml
tools/beskar_tools/: __init__.py  abs_client.py  audio.py  config.py  models.py  tag.py  yt.py
tools/beskar_tools/cli/: __init__.py  fill_descriptions.py  fix_ebooks.py  get_abs_token.py  grab.py  optimize_pdf.py  organize.py
tools/beskar_tools/normalize/: __init__.py  parser.py  patterns.py  rules.py
tools/beskar_tools/organize/: __init__.py  cleanup_rules.py  layout.py  merge.py
tools/beskar_tools/resolve/: __init__.py  cache.py  openlibrary.py  wikidata.py
tools/grab/: .env.example  README.md  grab  lib.sh  links.txt.example
tools/tests/: test_cleanup_rules.py  test_fix_ebooks.py  test_merge.py  test_optimize_pdf.py  test_parser.py  test_resolvers.py
(+52 files in other folders)
