[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beskar-tools"
version = "0.1.0"
description = "Audiobookshelf-oriented download, normalize, and organize tooling for beskar-shelf."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "yt-dlp>=2026.3.17",
  "httpx>=0.28",
  "pydantic>=2.13",
  "click>=8.3",
  "python-dotenv>=1.2",
  "rich>=15.0",
  "rapidfuzz>=3.14",
  "mutagen>=1.47",
  "lingua-language-detector>=2.2",
  "pymupdf>=1.24,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-httpx>=0.36",
  "ruff>=0.15",
]

[project.scripts]
beskar-grab = "beskar_tools.cli.grab:main"
beskar-organize = "beskar_tools.cli.organize:main"
beskar-fill-descriptions = "beskar_tools.cli.fill_descriptions:main"
beskar-fix-ebooks = "beskar_tools.cli.fix_ebooks:main"
beskar-get-abs-token = "beskar_tools.cli.get_abs_token:main"
beskar-optimize-pdf = "beskar_tools.cli.optimize_pdf:main"

[tool.setuptools.packages.find]
include = ["beskar_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# We routinely process Unicode text (YouTube titles use en-dashes, Czech/Slovak
# diacritics, etc.). Ambiguous-character warnings are noise for this codebase.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
